--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
   <!-- scripts concatenated and minified via ant build script-->
   <script defer src="js/plugins.js"></script>
   <script defer src="js/script.js"></script>
+  <script defer src="js/test.js"></script>
   <!-- end scripts-->
 
 
