boy does mobile safari js date suck. Implemented parser function

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
         
     <h1 id="ballance"></h1>
-    <nav><a href="#spend">-</a><a href="#earn">+</a></nav>
+    <nav><a href="#spend"><span>-</span></a><a href="#earn"><span>+</span></a></nav>
     <form action="" id="spend" method=post>
         
         <input placeholder="0.00 €" type="number" id="spendamount" name=amount required />
