--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <!-- Use the .htaccess and remove these lines to avoid edge case issues.
-       More info: h5bp.com/b/378 -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <title>A Simple Money Manager</title>
+  <title>A Simple Expense Tracker</title>
   <meta name="author" content="Horia Dragomir"> 
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
   <link rel="stylesheet" href="css/style.css">
